--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "to-do-list",
-  "homepage": "https://barbarazk.github.io/to-do-list/",
+  "name": "the-wish-list",
+  "homepage": "https://barbarazk.github.io/the-wish-list/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
